[gd_scene load_steps=2 format=3 uid="uid://c2035ff1rr6a8"]

[ext_resource type="Script" path="res://scripts/deck_edit.gd" id="1_wu1pw"]

[node name="DeckEdit" type="Node2D"]
script = ExtResource("1_wu1pw")

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
offset_left = 1287.0
offset_top = 222.0
offset_right = 1587.0
offset_bottom = 766.0

[node name="CollectionContainer" type="GridContainer" parent="ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 399.0
offset_top = 229.0
offset_right = 699.0
offset_bottom = 773.0

[node name="DeckContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="ChangeButton" type="Button" parent="."]
offset_left = 791.0
offset_top = 766.0
offset_right = 1147.0
offset_bottom = 864.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Поменять"

[node name="ExitButton" type="Button" parent="."]
offset_left = 791.0
offset_top = 900.0
offset_right = 1147.0
offset_bottom = 998.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Выйти"

[connection signal="pressed" from="ChangeButton" to="." method="_on_change_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
